Correct css for better alignment

--- a/tic-tac-toe.css
+++ b/tic-tac-toe.css
@@ -46,7 +46,7 @@
 
 .main2 {
     padding-top: 40px;
-    height: 70vh;
+    height: 600px;
     width: 500px;
     display: flex;
     flex-direction: column;
@@ -54,7 +54,7 @@
     align-items: center;
     background: white;
     box-shadow: var(--boxShadow);
-    gap: 60px;
+    gap: 30px;
 }
 
 .selection {
